--- a/changes.txt
+++ b/changes.txt
@@ -1,6 +1,12 @@
-0.2.1
+0.2.1 (2022-08-20)
 - Updated for BlueJ version 5.0 or higher
 - BinEd library updated
+- Added view as binary action in variables view
+- Added action for online help/manual
+- Added edit selection action
+- Added templates for profiles
+- Added insert data dialog
+- Added files compare dialog
 
 0.2.0 (2019-08-09)
 - Initial release
